--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Havishwaran - SK</title>
+    <title>Havishwaran - J</title>
     <link rel="icon" href="images/Logo.svg">
     <link rel="stylesheet" href="style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -133,7 +133,7 @@
         </section>
     </div>
     
-    <div class="project Section">
+    <div class="projectSection">
         <section id="project">
             <div class="title" data-aos="fade-right" data-aos-duration="1500">
                 <div>
@@ -144,54 +144,62 @@
             <div class="projectBox">
                 <div class="box" data-aos="zoom-in" data-aos-duration="1500">
                     <div>
-                        <img class="Development" src="images/surgery-room.png">
-                        <p class="p1">Medical Equipment Maintanence</p>
-                        <p class="p2">This is designed to streamline and automate the management of medical equipment maintenance schedules. Developed using Python Flask, HTML, CSS, JS and MongoDB, the application enables healthcare facilities to track and schedule maintenance tasks for their medical equipment.</p>
+                        <img class="Development" src="images/tnsand.webp" alt="TN Sand Project">
+                        <p class="p1">TN Sand Project</p>
+                        <p class="p2">Led the migration of the Tamil Nadu River Sand Supply system from .NET to .NET Core, improving scalability and performance. Developed features for online booking, distribution management, and real-time tracking of sand deliveries for government clients.</p>
                     </div>
                 </div>
                 <div class="box" data-aos="zoom-in" data-aos-duration="1500">
                     <div>
-                        <img class="Development" src="images/computer-monitor.png">
-                        <p class="p1">Linux Script</p>
-                        <p class="p2">This project illustrates how malicious actors might create duplicate webpages to gather user like IP and location. Aimed at raising awareness about online security risks, the tool serves as an educational resource to showcase the importance of vigilance and secure browsing practices.</p>
+                        <img class="Development" src="images/sauda.webp" alt="Fortune Sauda">
+                        <p class="p1">Fortune Sauda</p>
+                        <p class="p2">Designed and developed a sales and stock management system for Adani Wilmar using .NET, enabling financial operations and real-time data reporting. Implemented performance optimizations to enhance user experience.</p>
                     </div>
                 </div>
                 <div class="box" data-aos="zoom-in" data-aos-duration="1500">
                     <div>
-                        <img class="Development" src="images/database.png">
-                        <p class="p1">Student Database Management</p>
-                        <p class="p2"> It empowers each student with a personalized login to store academic data and certificates securely. Staff members can efficiently access and manage student records. This system enhances administrative workflows, ensuring a centralized and organized repository for student information and certificates.</p>
+                        <img class="Development" src="images/lant.jpg" alt="L&T Valves">
+                        <p class="p1">L&T Valves</p>
+                        <p class="p2">Developed QR code generation and user management functionality, enhancing product authenticity tracking. Contributed to system deployment and hosting for seamless business integration through web and mobile applications.</p>
                     </div>
                 </div>
                 <div class="box" data-aos="zoom-in" data-aos-duration="1500">
                     <div>
-                        <img class="Development" src="images/bill.png">
-                        <p class="p1">Textile Billing Software</p>
-                        <p class="p2">The Textile Billing Software is a comprehensive solution designed for textile businesses to streamline their billing processes. This application, often developed using programming language like Python, facilitates efficient invoicing, inventory management, and sales tracking within the textile industry.</p>
+                        <img class="Development" src="images/aai.png" alt="Airport Authority Project">
+                        <p class="p1">Airport Authority Project</p>
+                        <p class="p2">Built a ticket verification system for Chennai Airport, improving passenger management by scanning and validating tickets. Integrated airline data to optimize operations for gate personnel.</p>
                     </div>
                 </div>
                 <div class="box" data-aos="zoom-in" data-aos-duration="1500">
                     <div>
-                        <img class="Development" src="images/google.png">
-                        <p class="p1">Google Keep Clone</p>
-                        <p class="p2">The Google Keep Clone is a simplified note-taking application developed using technologies like HTML, CSS, and JavaScript, with local storage functioning as the database. This project allows users to create, edit, and delete notes, mimicking the core functionality of Google Keep.</p>
+                        <img class="Development" src="images/vislogo1.png" alt="VIS">
+                        <p class="p1">VIS</p>
+                        <p class="p2">Developed a React web application with a .NET Core backend and MySQL database, hosted on Docker with CI/CD integration. Created a platform for non-binary individuals to connect with NGOs via WebRTC-powered calls, ensuring privacy.</p>
+                    </div>
+                </div>
+                <div class="box" data-aos="zoom-in" data-aos-duration="1500">
+                    <div>
+                        <img class="Development" src="images/fitlogo.png" alt="Fitertz">
+                        <p class="p1">Fitertz</p>
+                        <p class="p2">Built a full-stack .NET Core web application for gym owners to manage gyms, clients, and customizable plans. Integrated workout management, PhonePe payment gateway, and user claims handling for seamless client experiences.</p>
                     </div>
                 </div>
             </div>
             <p class="bottomP" data-aos="fade-up" data-aos-duration="1000"><a href="https://github.com/Havishwaran02SK" target="_blank">Visit Github to view more</a></p>
         </section>
     </div>
+    
     <div class="contactSection">
         <section id="contact">
             <div data-aos="fade-up" data-aos-duration="1500">
                 <p>The door to communication is always open. Reach out, and let's make things happen!</p>
                 <h1>Contacts</h1>
                 <ul>
-                    <li><a href="tel:+916369420882"><i class="fa-solid fa-phone"></i></a></li>
-                    <li><a href="mailto:havishwara3110@gmail.com"><i class="fa-solid fa-envelope"></i></a></li>
+                    <li><a href="tel:+919655390115"><i class="fa-solid fa-phone"></i></a></li>
+                    <li><a href="mailto:havishwaran3110@gmail.com"><i class="fa-solid fa-envelope"></i></a></li>
                     <li><a href="https://www.instagram.com/havishwaran/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-                    <li><a href="https://github.com/Havishwaran" target="_blank"><i class="fa-brands fa-square-github"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/Havishwaran" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+                    <li><a href="https://github.com/Havish123" target="_blank"><i class="fa-brands fa-square-github"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/havishwaran-jeyakumar-97768818b/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
                 </ul>
                 <p>&copy;2024, Havishwaran. All Rights Reserved.<br>Designed By Havishwaran</p>
             </div>
