--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     </div>
                 </div>
             </div>
-            <p class="bottomP" data-aos="fade-up" data-aos-duration="1000"><a href="https://github.com/Havishwaran02SK" target="_blank">Visit Github to view more</a></p>
+            <p class="bottomP" data-aos="fade-up" data-aos-duration="1000"><a href="https://github.com/Havish123" target="_blank">Visit Github to view more</a></p>
         </section>
     </div>
     
