--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-    <img class="Background-Image1" src="images/bgdarkframe1.webp" alt="Background-Image">
-    <img class="Background-Image" src="images/bgdarkframe1.webp" alt="Background-Image1">
+    <img class="Background-Image1" src="images/bglight1.svg" alt="Background-Image">
+    <img class="Background-Image" src="images/bglight2.svg" alt="Background-Image1">
     <div class="banter-loader" id="banter-loader">
         <div class="banter-loader__box"></div>
         <div class="banter-loader__box"></div>
@@ -28,7 +28,7 @@
         <div class="banter-loader__box"></div>
       </div>
     <header id="head">
-        <img src="images/myphoto.jpg" class="logo">
+        <!-- <img src="images/profile1.png" class="logo"> -->
         <nav>
             <div class="menu" onclick="myFunction(this)">
                 <div class="bar1"></div>
@@ -45,15 +45,20 @@
             </ul>
         </nav>
     </header>
-    <div class="intro">
-        <div class="introContent">
-            <div>
-                <p data-aos="fade-up-left" data-aos-duration="1500">Hey There!, I'm Havishwaran</p>
-                <p data-aos="fade-down-right" data-aos-duration="1500">Full Stack Developer | .Net Core</p> 
+    <div class="container text-center my-4">
+        <img src="images/profile1.png" alt="Havishwaran" class="profilepic">
+        <div class="intro">
+            <div class="introContent">
+                <div>
+                    <p data-aos="fade-up-left" data-aos-duration="1500">Hey There!, I'm Havishwaran</p>
+                    <p data-aos="fade-down-right" data-aos-duration="1500">Full Stack Developer | .Net Core</p> 
+                </div>
+                <p>Passionate Developer</p>
             </div>
-            <p>Passionate Developer</p>
         </div>
     </div>
+   
+   
     <div class="aboutContent">
         <section id="about">
             <div class="title" data-aos="fade-right" data-aos-duration="1000">
