--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </nav>
     </header>
     <div class="container text-center my-4">
-        <img src="images/profile1.png" alt="Havishwaran" class="profilepic">
+        <img src="images/havis.png" alt="Havishwaran" class="profilepic">
         <div class="intro">
             <div class="introContent">
                 <div>
