--- a/index.html
+++ b/index.html
@@ -168,11 +168,26 @@
                 <div class="experienceBox row justify-content-center">
                     <div class="job col-12 col-md-12 d-flex justify-content-center mb-4">
                         <div class="jobContent d-flex flex-column flex-md-row align-items-center">
+                            <img src="images/coatslogo.svg" alt="Zoho Logo" width="22%" class="companyLogo mb-3 mb-md-0 mr-md-4">
+                            <div class="jobDetails text-left">
+                                <h3>Software Engineer - Colour Systems</h3>
+                                <h4>Madura Coats, Madurai, Tamil Nadu</h4>
+                                <p><strong>March 2025 – Present</strong></p>
+                                <ul>
+                                    <li>Develop and maintain Windows applications for colour management, formulation, and matching.</li>
+                                    <li>Implement performance improvements and new features based on industry requirements.</li>
+                                    <li>Ensure seamless data exchange between software and production systems.</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="job col-12 col-md-12 d-flex justify-content-center mb-4">
+                        <div class="jobContent d-flex flex-column flex-md-row align-items-center">
                             <img src="images/zohologo.svg" alt="Zoho Logo" width="22%" class="companyLogo mb-3 mb-md-0 mr-md-4">
                             <div class="jobDetails text-left">
                                 <h3>Member Technical Staff</h3>
                                 <h4>Zoho Corporation, Chennai, Tamil Nadu</h4>
-                                <p><strong>June 2024 – Present</strong></p>
+                                <p><strong>June 2024 – March 2025</strong></p>
                                 <ul>
                                     <li>Developed high-performance C++ modules, focusing on system optimization and scalability.</li>
                                     <li>Actively involved in code reviews and contributed to best practices for code quality and internal documentation.</li>
